# GANN

./: .gitignore  CMakeLists.txt  GANN.sln
GANN/: Coder.cpp  Coder.h  Connection.cpp  Connection.h  Decoder.cpp  Decoder.h  Drawer.cpp  Drawer.h  Encoder.cpp  Encoder.h  GANN.vcxproj  GANN.vcxproj.filters  Genetic.cpp  Genetic.h  Layer.cpp  Layer.h  Main.cpp  NeuralNet.cpp  NeuralNet.h  Node.cpp  Node.h  Tests.cpp  Tests.h  Utility.cpp  Utility.h  utility.cpp  utility.h
